# pime

./: .clang-format  .gitignore  .gitmodules  Doxyfile  Makefile  Makefile-cpp  Makefile-enet  Makefile-rust  README.md  TODO  build.sh  clean.sh  config.txt  configure  format-all.sh  install.md  lines.sh  meson.build  meson_options.txt  run_gdb_raylib.sh  run_gdb_sdl.sh  run_gdb_tui.sh  run_local_raylib.sh  run_local_sdl.sh  run_local_tui.sh  run_server.sh  start-meson.sh  start.sh
SDL/: BeingSDL.cpp  BeingSDL.h  CMakeLists.txt  alchemistSDL.cpp  alchemistSDL.h  backend.cpp  backend.inl  configure  inputs.cpp  main.cpp  main.h  menu.cpp  menu.h  meson.build  music.cpp  music.h  net.cpp  networking.cpp  networking.h  networking_enet.h  networking_gen.h  npc.cpp  npc.h  palette.c  palette.cpp  playerUI.cpp  playerUI.h  player_actions.cpp  player_actions.h  render.cpp  run_gdb.sh  run_local.sh  test-net.sh  text.cpp  text.h  texture.cpp  texture.h  update_network_bindings.sh  window.cpp  window.h
SDL/dialog/: Makefile  d_action.cpp  d_action.h  d_craft.cpp  d_craft.h  d_hotbar.cpp  dialog.cpp  dialog.h  test_dialog  test_dialog.cpp
SDL/implementations/: BeingSDL.cpp  BeingSDL.h  alchemistSDL.cpp  alchemistSDL.h  playerSDL.cpp  playerSDL.h
SDL/tests/: CMakeLists.txt  test_sdl.cpp
SDL/textures/: Makefile  test_textures.cpp
client-common/: alchemist2d.cpp  alchemist2d.h  being2d.cpp  being2d.h  game.cpp  game.h  inputs.cpp  inputs.h  key_handler.h  key_handlers.cpp  key_handlers.h  menu.h  meson.build  music.h  net.cpp  net.h  net.inl  npc.h  player_actions.cpp  players.cpp  players.h  render.cpp  render.h  text.cpp  text.h  texture.cpp  texture.h  window.h
core/: CMakeLists.txt  clan.cpp  clan.h  generate_packet_types.sh  key_handler.h  meson.build  networking.cpp  networking.h  npc.cpp  npc.h  packet_types.cpp  packet_types.h  packet_types.txt  packets.cpp  packets.h  player.cpp  player.h  protocol.md  tiles.cpp  tiles.h  time.cpp  time.h  world.cpp  world.h  world_params.h
core/alchemist/: Makefile  answers.txt  cbindgen.toml  el_list.cpp  el_list.h  elements.cpp  elements.h  generate_files.sh  item_location.h  item_location.rs  meson.build  ncurses-output.h  npc_talk.cpp  npc_talk.h  object.cpp  object.h  properties.cpp  properties.h  questions.txt  sentences.txt  serialization-enet.cpp  serialization-enet.h  serialization-rust.cpp  serialization-rust.h  serialization.cpp  serialization.h  skills.cpp  skills.h  skills.txt  test_lists.cpp
core/alchemist-tui/: Makefile  main.cpp  network_stub.cpp  plants.cpp  show_list.cpp  show_list.h  test_axe.cpp  test_axe.h  test_knife.cpp  test_knife.h
core/alchemist/tests/: Makefile
dialog/: d_action.cpp  d_craft.cpp  d_craft.h  d_hotbar.cpp  d_hotbar.h  dialog.cpp  dialog.h  meson.build
dialog/tests/: CMakeLists.txt  Makefile  handle_events_raylib.cpp  handle_events_sdl.cpp  test_dialog.cpp  textures
godot/: .gitignore  SConstruct  start.sh
godot/src/: element_godot.cpp  net_manager.h  (+3 more)
menu/: menu.cpp  menu.h  meson.build
raylib/: CMakeLists.txt  backend.cpp  backend.inl  inputs.cpp  main.cpp  menu.cpp  meson.build  music.cpp  net.cpp  playerUI.cpp  playerUI.h  render.cpp  run_gdb.sh  run_local.sh  text.cpp  texture.cpp  textures  window.cpp
raylib/tests/: CMakeLists.txt  test_raylib.cpp
server/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  chunk.cpp  chunk.h  configure  console.cpp  console.h  craft.cpp  craft.h  craft_ing.cpp  craft_ing.h  craft_prod.cpp  elements_server.cpp  elements_server.h  inputs.cpp  inputs.h  key_handlers.cpp  key_handlers.h  meson.build  networking.cpp  networking.h  player_server.cpp  player_server.h  run_gdb.sh  server.cpp  server.h  update_core.sh  world_server.cpp  world_server.h
server/cpp-src/: CMakeLists.txt  craft.cpp  craft.h  craft_ing.cpp  craft_ing.h  craft_prod.cpp  craft_prod.h  elements_server.cpp  elements_server.h  headers_wrapper.h  ncurses-costam.h  networking.cpp  networking.h  player_server.cpp  player_server.h  world_server.cpp  world_server.h
server/cpp-src/places/: places.cpp  places.h
server/cpp-src/tools/: axe.cpp  axe.h  axe_blade.cpp  axe_blade.h  axe_handle.cpp  axe_handle.h  create_new_ing.sh  create_new_prod.sh  fire.cpp  fire.h  fruit.cpp  fruit.h  fruit_salad.cpp  fruit_salad.h  hoe.cpp  hoe_blade.cpp  hoe_handle.cpp  hut.cpp  hut.h  knife.cpp  knife.h  knife_blade.cpp  knife_blade.h  knife_handle.cpp  knife_handle.h  log.cpp  log.h  meat.cpp  meat.h  pickaxe.cpp  pickaxe.h  pickaxe_blade.cpp  pickaxe_blade.h  pickaxe_handle.cpp  pickaxe_handle.h  roasted_meat.cpp  roasted_meat.h  seed.cpp  seedling.cpp  stick.cpp  (+11 more)
server/enet/: CMakeLists.txt  server.cpp  server.h
server/enet/generator/: Makefile  generator.cpp  generator.h  main.cpp
server/generator/: generator.cpp  generator.h  random_functions.cpp  random_functions.h
server/places/: places.cpp  places.h
server/src/: convert_types.rs  core.rs  core_bindings.rs  generator.rs  lib.rs  main.rs  types.rs
server/tests/: Makefile  functions.cpp  ncurses.c  ncurses.cpp
server/tools/: axe.cpp  axe_blade.cpp  axe_handle.cpp  create_new_ing.sh  fruit.cpp  hoe.cpp  hoe_blade.cpp  hoe_handle.cpp  hut.cpp  knife.cpp  knife_handle.cpp  log.cpp  meat.cpp  pickaxe.cpp  pickaxe_blade.cpp  pickaxe_handle.cpp  roasted_meat.cpp  seed.cpp  seedling.cpp  stick.cpp  template_ing.cpp  tent.cpp  tools.h
tests/: meson.build  test_generator_sdl.cpp  test_lists.cpp  test_raylib.cpp  test_sdl.cpp  test_sdl_textures.cpp
tests/dialog/: handle_events_raylib.cpp  handle_events_sdl.cpp  meson.build  test_dialog.cpp
tests/menu/: CMakeLists.txt  handle_events_raylib.cpp  handle_events_sdl.cpp  meson.build  test_menu.cpp
tests/server/: elements.cpp  functions.cpp  functions.h  meson.build  ncurses.cpp
the_game_net/: Cargo.toml  build.rs  core_headers.h
tui/: CMakeLists.txt  backend.cpp  backend.inl  configure  implementations  main.cpp  main.h  meson.build  net.cpp  playerTUI.cpp  playerTUI.h  playerUI.cpp  playerUI.h  run_gdb.sh  run_local.sh  sdl_stub.cpp
tui/enet/: CMakeLists.txt  configure  net.cpp
(+15 files in other folders)
